--- a/EntrySystem/src/main/resources/i18n/message_en.properties
+++ b/EntrySystem/src/main/resources/i18n/message_en.properties
@@ -1,4 +1,5 @@
 login.choose_language=Choose language
+login.slovak=Slovenský
 login.english=English
 login.ukrainian=Українська
 login.title=Log In
