Added styles to all pages, added validation to all forms

--- a/EntrySystem/src/main/resources/i18n/message_en.properties
+++ b/EntrySystem/src/main/resources/i18n/message_en.properties
@@ -87,3 +87,8 @@ rating.first_name=First name
 rating.second_name=Second name
 rating.marks=Marks
 rating.is_accepted=Is accepted?
+
+error.message=Your username or password is invalid
+logout.message=You have been logged out successfully
+password.validation=Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters
+password.confirmation=Passwords don't match
