--- a/EntrySystem/src/main/resources/i18n/message_sk.properties
+++ b/EntrySystem/src/main/resources/i18n/message_sk.properties
@@ -49,7 +49,7 @@ entrant_registration.file_is_not_choosed=Súbor nie je vybraný
 entrant_registration.register=Zaregistrovať sa
 
 registration.title=Vytvorenie účtu
-registration.create_your_account=Vytvoríte vás účet
+registration.create_your_account=Vytvoríte váš účet
 registration.first_name=Meno
 registration.second_name=Priezvisko
 registration.age=Vek
@@ -79,6 +79,7 @@ rating.menu=Menu
 rating.home=Domov
 rating.create_faculty=Vytvoriť Fakultu
 rating.registered_entrants=Zaregistrované uchádzače o štúdium
+rating.rating=Rating
 rating.welcome=Vitajte
 rating.logout=Odhlásiť sa
 rating.students_rating=Rating študentov tejto fakulty
@@ -86,3 +87,8 @@ rating.first_name=Meno
 rating.second_name=Priezvisko
 rating.marks=Známky
 rating.is_accepted=Prijato?
+
+error.message=Nesprávny e-mail alebo heslo
+logout.message=Ste sa úspešne odhlásil
+password.validation=Musí obsahovať jednu číslicu, jedno malé a veľké písmeno, 8 alebo viac znakov
+password.confirmation=Heslá sa nezhodujú
