--- a/EntrySystem/src/main/resources/i18n/message_uk.properties
+++ b/EntrySystem/src/main/resources/i18n/message_uk.properties
@@ -87,3 +87,8 @@ rating.first_name=Ім'я
 rating.second_name=Прізвище
 rating.marks=Оцінки
 rating.is_accepted=Зараховано?
+
+error.message=Невірний логін або пароль
+logout.message=Ви успішно покинули сторінку
+password.validation=Мусить містити одну цифру, одну літеру нижнього та верхнього регістрів, 8 або більше символів
+password.confirmation=Паролі не співпадають
